fix CommentsSkeleton overflow on mobile

--- a/src/assets/styles/output.css
+++ b/src/assets/styles/output.css
@@ -738,12 +738,24 @@ video {
   width: 100vw;
 }
 
-.min-w-36 {
-  min-width: 9rem;
+.w-1\/3 {
+  width: 33.333333%;
+}
+
+.w-1\/4 {
+  width: 25%;
 }
 
 .min-w-20 {
   min-width: 5rem;
+}
+
+.min-w-1 {
+  min-width: 0.25rem;
+}
+
+.min-w-16 {
+  min-width: 4rem;
 }
 
 .max-w-container {
